--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url(/images/background.jpg) center/cover no-repeat;
+    background: url(images/background.jpg) center/cover no-repeat;
     
 }
 .box{
